tests/invalid/generated_binop_bitxor_bool_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: bool = True
    z = x ^ y
